[tool.poetry]
name = "hubspot-python"
version = "1.0.3"
description = "API wrapper for HubSpot written in Python"
authors = ["Miguel Ferrer <ingferrermiguel@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hubspot"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

